--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "mkdir -p build && npm-run-all --parallel dev-statics dev-bundle dev-start",
     "dev-bundle": "mkdir -p build && watchify src/app/app.js --debug --cache-dir ./.cache --watch --verbose -p browserify-hmr -o build/app.js ",
     "dev-statics": "cpx './src/statics/*' ./build -vw",
+    "dev-serve": "http-server -c 1 -a localhost build",
     "dev-start": "electron .",
     "standard": "standard \"**/*.{vue,js}\""
   },
@@ -32,10 +33,14 @@
     "cross-env": "^2.0.1",
     "domready": "^1.0.8",
     "electron-packager": "^8.0.0",
+    "http-server": "^0.9.0",
+    "lodash.debounce": "^4.0.8",
     "notp": "^2.0.3",
     "npm-run-all": "^3.1.0",
     "standard": "^8.1.0",
     "thirty-two": "^1.0.2",
+    "uglifyify": "^3.0.3",
+    "uglifyjs": "^2.4.10",
     "vue": "^2.0.0-rc.6",
     "vueify": "^9.2.4",
     "vuex": "^2.0.0-rc.5",
