--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./main.js",
   "scripts": {
     "dev": "mkdir -p build && npm-run-all --parallel dev-statics dev-bundle dev-start",
+    "dev-browser": "mkdir -p build && npm-run-all --parallel dev-statics dev-bundle dev-serve",
     "dev-bundle": "mkdir -p build && watchify src/app/app.js --debug --cache-dir ./.cache --watch --verbose -p browserify-hmr -o build/app.js ",
     "dev-statics": "cpx './src/statics/*' ./build -vw",
     "dev-serve": "http-server -c 1 -a localhost build",
@@ -14,7 +15,11 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "electron": "^1.4.0"
+    "electron": "^1.4.0",
+    "fs-extra": "^0.30.0",
+    "fs-extra-promise": "^0.4.1",
+    "global": "^4.3.0",
+    "home-or-tmp": "^2.0.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
