--- a/package.json
+++ b/package.json
@@ -1,27 +1,37 @@
 {
   "name": "basicnotp",
+  "productName": "BasicNOTP",
   "version": "1.0.0",
   "description": "A basic Electron app for 2FA oath",
   "main": "./main.js",
   "scripts": {
-    "dev": "mkdir -p build && npm-run-all --parallel dev-statics dev-bundle dev-start",
-    "dev-browser": "mkdir -p build && npm-run-all --parallel dev-statics dev-bundle dev-serve",
+    "dev": "mkdir -p build && npm-run-all --parallel dev-electron-pkg dev-statics dev-bundle",
     "dev-bundle": "mkdir -p build && watchify src/app/app.js --debug --cache-dir ./.cache --watch --verbose -p browserify-hmr -o build/app.js ",
-    "dev-statics": "cpx './src/statics/*' ./build -vw",
+    "dev-statics": "cpx './src/{index.html,main.js,style.css}' ./build -vw",
+    "dev-electron-pkg": "node ./scripts/gen-electron-pkg.js > ./build/package.json",
     "dev-serve": "http-server -c 1 -a localhost build",
-    "dev-start": "electron .",
+    "dev-start": "electron build",
+    "clean": "rm -Rf dist build",
+    "dist": "mkdir -p dist && npm-run-all dist-bundle dist-bundle dist-statics dist-electron-pkg dist-install dist-package dist-compress",
+    "dist-bundle": "mkdir -p dist && cross-env NODE_ENV=production browserify -g envify -g uglifyify -p [ vueify/plugins/extract-css -o dist/bundle.css ] -e src/app/app.js | uglifyjs -c warnings=false -m > dist/app.js",
+    "dist-statics": "mkdir -p dist && cpx './src/{index.html,main.js,style.css}' ./dist",
+    "dist-electron-pkg": "mkdir -p dist && node ./scripts/gen-electron-pkg.js > ./dist/package.json",
+    "dist-install": "cd dist && npm install --production",
+    "dist-package": "electron-packager ./dist BasicNOTP --out releases --asar",
+    "dist-compress": "./scripts/compress-releases.sh",
     "standard": "standard \"**/*.{vue,js}\""
   },
-  "author": "",
+  "author": "Jean Ponchon <jean.ponchon@novadiscovery.com>",
   "license": "MIT",
   "dependencies": {
-    "electron": "^1.4.0",
     "fs-extra": "^0.30.0",
     "fs-extra-promise": "^0.4.1",
-    "global": "^4.3.0",
+    "bluebird": "^3.4.6",
+    "bluebird-co": "^2.1.2",
     "home-or-tmp": "^2.0.0"
   },
   "devDependencies": {
+    "electron": "^1.4.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -30,14 +40,14 @@
     "babel-preset-stage-2": "^6.13.0",
     "babel-runtime": "^6.11.6",
     "babelify": "^7.3.0",
-    "bluebird": "^3.4.6",
-    "bluebird-co": "^2.1.2",
     "browserify": "^13.1.0",
     "browserify-hmr": "^0.3.5",
     "cpx": "^1.5.0",
     "cross-env": "^2.0.1",
     "domready": "^1.0.8",
     "electron-packager": "^8.0.0",
+    "envify": "^3.4.1",
+    "global": "^4.3.0",
     "http-server": "^0.9.0",
     "lodash.debounce": "^4.0.8",
     "notp": "^2.0.3",
