--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "home-or-tmp": "^2.0.0"
   },
   "devDependencies": {
-    "electron": "^1.4.0",
     "babel": "^6.5.2",
     "babel-cli": "^6.14.0",
     "babel-core": "^6.14.0",
@@ -46,8 +45,11 @@
     "cpx": "^1.5.0",
     "cross-env": "^2.0.1",
     "domready": "^1.0.8",
+    "electron": "^1.4.0",
     "electron-packager": "^8.0.0",
     "envify": "^3.4.1",
+    "eslint-plugin-html": "^1.5.2",
+    "eslint-plugin-vue": "^0.1.1",
     "global": "^4.3.0",
     "http-server": "^0.9.0",
     "lodash.debounce": "^4.0.8",
@@ -86,5 +88,16 @@
     "2fa",
     "password",
     "aes"
-  ]
+  ],
+  "standard": {
+    "plugins": [
+      "html",
+      "vue"
+    ],
+    "ignore": [
+      "**/build/**",
+      "**/dist/**",
+      "**/releases/**"
+    ]
+  }
 }
