--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
   "author": "Jean Ponchon <jean.ponchon@novadiscovery.com>",
   "license": "MIT",
   "dependencies": {
-    "fs-extra": "^0.30.0",
-    "fs-extra-promise": "^0.4.1",
     "bluebird": "^3.4.6",
     "bluebird-co": "^2.1.2",
-    "home-or-tmp": "^2.0.0"
+    "fs-extra": "^0.30.0",
+    "fs-extra-promise": "^0.4.1",
+    "home-or-tmp": "^2.0.0",
+    "qr-image": "^3.1.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
