--- a/package.json
+++ b/package.json
@@ -7,14 +7,15 @@
   "private": true,
   "scripts": {
     "dev": "mkdir -p build && npm-run-all --parallel dev-electron-pkg dev-statics dev-bundle",
-    "dev-bundle": "mkdir -p build && watchify src/app/app.js --debug --cache-dir ./.cache --watch --verbose -p browserify-hmr -o build/app.js ",
+    "dev-bundle": "mkdir -p build && watchify src/app/index.js --debug --cache-dir ./.cache --watch --verbose -p browserify-hmr -o build/app.js ",
     "dev-statics": "cpx './src/{index.html,main.js,lib/**/*}' ./build -vw",
     "dev-electron-pkg": "node ./scripts/gen-electron-pkg.js > ./build/package.json",
     "dev-serve": "http-server -c 1 -a localhost build",
+    "dev-electron": "electron build/main.js",
     "dev-start": "electron build",
     "clean": "rm -Rf dist build",
     "dist": "mkdir -p dist && npm-run-all dist-bundle dist-bundle dist-statics dist-electron-pkg dist-install dist-package dist-compress",
-    "dist-bundle": "mkdir -p dist && cross-env NODE_ENV=production browserify -g envify -g uglifyify -p [ vueify/plugins/extract-css -o dist/bundle.css ] -e src/app/app.js | uglifyjs -c warnings=false -m > dist/app.js",
+    "dist-bundle": "mkdir -p dist && cross-env NODE_ENV=production browserify -g envify -g uglifyify -p [ vueify/plugins/extract-css -o dist/bundle.css ] -e src/app/index.js | uglifyjs -c warnings=false -m > dist/app.js",
     "dist-statics": "mkdir -p dist && cpx './src/{index.html,main.js,lib/**/*}' ./dist",
     "dist-electron-pkg": "mkdir -p dist && node ./scripts/gen-electron-pkg.js > ./dist/package.json",
     "dist-install": "cd dist && npm install --production",
@@ -57,6 +58,7 @@
     "notp": "^2.0.3",
     "npm-run-all": "^4.0.1",
     "standard": "^8.6.0",
+    "stylus": "^0.54.5",
     "thirty-two": "^1.0.2",
     "uglifyify": "^3.0.4",
     "uglifyjs": "^2.4.10",
