--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "dev": "mkdir -p build && npm-run-all --parallel dev-electron-pkg dev-statics dev-bundle",
     "dev-bundle": "mkdir -p build && watchify src/app/index.js --debug --cache-dir ./.cache --watch --verbose -p browserify-hmr -o build/app.js ",
-    "dev-statics": "cpx './src/{index.html,main.js,lib/**/*}' ./build -vw",
+    "dev-statics": "cpx './src/{index.html,main.js,lib/**/*,img/*}' ./build -vw",
     "dev-electron-pkg": "node ./scripts/gen-electron-pkg.js > ./build/package.json",
     "dev-serve": "http-server -c 1 -a localhost build",
     "dev-electron": "electron build/main.js",
@@ -16,7 +16,7 @@
     "clean": "rm -Rf dist build",
     "dist": "mkdir -p dist && npm-run-all dist-bundle dist-bundle dist-statics dist-electron-pkg dist-install dist-package dist-compress",
     "dist-bundle": "mkdir -p dist && cross-env NODE_ENV=production browserify -g envify -g uglifyify -p [ vueify/plugins/extract-css -o dist/bundle.css ] -e src/app/index.js | uglifyjs -c warnings=false -m > dist/app.js",
-    "dist-statics": "mkdir -p dist && cpx './src/{index.html,main.js,lib/**/*}' ./dist",
+    "dist-statics": "mkdir -p dist && cpx './src/{index.html,main.js,lib/**/*,img/*}' ./dist",
     "dist-electron-pkg": "mkdir -p dist && node ./scripts/gen-electron-pkg.js > ./dist/package.json",
     "dist-install": "cd dist && npm install --production",
     "dist-package": "electron-packager ./dist BasicOTP --out releases --asar --platform=darwin,linux --arch=x64",
